# learn-pi

./: .gitignore  LICENSE.txt  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.node.json  vite.config.ts
.github/workflows/: deploy.yml
backend/: Cargo.toml  schema.sql
backend/migrations/: 1_schema.sql  migrations.sql
backend/src/: main.rs  queries.rs  service.rs
src/: App.tsx  app.css  app.tsx  backArrow.tsx  barGraph.tsx  customRouter.tsx  digitCell.tsx  digitsGrid.tsx  keyboard-listener.tsx  keyboardListener.tsx  main.tsx  middleware.tsx  mistakeCounter.tsx  mobileInput.tsx  notFound.tsx  play.tsx  stats.tsx  statsDisplay.tsx  theme.tsx  title.tsx
src/utils/: consts.ts  storedState.ts
