[package]
name = "learn-pi-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.4"
num-traits = "0.2.18"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
shuttle-axum = "0.43.0"
shuttle-runtime = "0.43.0"
shuttle-shared-db = { version = "0.43.0", features = ["sqlx", "postgres"] }
sqlx = { version = "0.7.4", features = ["postgres", "runtime-tokio-rustls", "chrono", "bigdecimal"] }
tokio = "1.28.2"
tower-http = { version = "0.5.2", features = ["cors"] }
